--- a/estilo/estilologin.css
+++ b/estilo/estilologin.css
@@ -1,6 +1,9 @@
 @charset "UTF-8"; 
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 :root{
-    --corbege: #e6ecf1;
+    --corfundo: #e6ecf1;
     --cormarromclaro: rgb(119, 119, 119);
     --cormarromescuro: #9D7B6F;
     --corvermelho: #8C463F;
@@ -11,20 +14,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: var(--corbege);
+    color: white;
+    font-family: "Playfair Display", serif;
 }
 
 body{
-    background-color: var(--corbege);
+    background-color: var(--corfundo);
 }
-ul{
+ul{ /*link para cadastrar com conta google*/
     list-style-type: none;
 }
-a{
+.google{ /*link para cadastrar com conta google*/
     text-decoration: none;
     border: 1px solid #406145;
-    padding: 5px;
+    padding: 3px 5px;
     border-radius: 8px;
+}
+a:hover{
+    opacity: 0.8;
 }
 .container{/*container principal*/
     display: flex;
@@ -33,12 +40,11 @@ a{
     height: 100vh;   
 } 
 .box {
-    display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
     border-radius: 10px;
-    width: 90vw;
+    width: 100vw;
     height: 60vh;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 } 
@@ -48,27 +54,45 @@ a{
     background-color: #5E8C65;
     width: 40%;
     height: 100%;
+    border-radius: 10px 0 0 10px;
+
+    left: 0;
 }
 .primeiro-box {/*box cadastrar*/
     display: flex;
 } 
 .coluna-um{/*para ir para o login*/
-    flex: 1 0 auto;
+    width: 40%;
     text-align: center;
     z-index: 10;
 } 
 .coluna-dois{ /*para realizar o cadastro*/
     display: flex;
-    flex: 2 0 auto;
+    width: 60%;
     flex-direction: column;
     align-items: center;
 
 }
+.primeiro-box .coluna-dois{
+    z-index: 11;
+}
 
 .segundo-box{ /*para realizar o login*/
     position: absolute;
-    display: none;
+    display: flex;
 }
+
+.segundo-box .coluna-um {
+    order: 2;
+    z-index: -1;
+}
+.segundo-box .coluna-dois {
+    order: 1;
+    z-index: -1;
+
+
+}
+
 
 /*TEXTOS*/
 .titulo{
@@ -88,16 +112,17 @@ form {
     flex-direction: column;
 }
 
-img{
-    justify-content: center;
+.img-input{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    gap: 5px;
 }
 input{
     border: none;
     border-radius: 8px;
-    margin-bottom: 10px;
     padding: 8px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
-
 }
 button{
     padding: 7px;
@@ -110,4 +135,79 @@ button{
 button:hover{
     cursor: pointer;
     opacity: 0.8;
+}
+
+.entrar-js .primeiro-box {
+    display: none;
+}
+.cadastrar-js .segundo-box{
+    display: none;
+}
+.entrar-js .primeiro-box .coluna-um {
+    z-index: -1;
+}
+.entrar-js .primeiro-box .coluna-dois {
+    z-index: -1;
+}
+.entrar-js .segundo-box .coluna-dois {
+    z-index: 11;
+    
+}
+
+.entrar-js .segundo-box .coluna-um {
+    z-index: 12;
+}
+
+.entrar-js .box::before {
+    left: 60%;
+    border-radius: 0 10px 10px 0;
+    animation: slidein 1.3s;
+    
+    z-index: 12;
+}
+
+.cadastrar-js .box::before {
+    animation: slideout 1.3s;
+
+    z-index: 12;
+}
+
+.cadastrar-js .segundo-box .coluna-um,
+.cadastrar-js .segundo-box .coluna-dois {
+    z-index: -1;
+    
+}
+.cadastrar-js .primeiro-box .coluna-dois {
+    z-index: 11;
+    
+}
+.cadastrar-js .primeiro-box .coluna-um {
+    z-index: 13;
+}
+
+/* DESLOCAMENTO CONTEÚDO ATRÁS DO BOX:BEFORE*/
+.entrar-js .primeiro-box .coluna-dois {
+    z-index: -1;
+    position: relative;
+    animation: deslocamentoEsq 1.3s;
+}
+
+.cadastrar-js .segundo-box .coluna-dois {
+    position: relative;
+    z-index: -1;
+    animation: deslocamentoDir 1.3s;
+}
+
+/*Responsividade*/
+
+@media screen  and (min-width: 768px) and (max-width: 992px) {
+    .box{
+        width: 80vw;
+    }
+}
+
+@media screen  and (min-width: 992px) {
+    .box{
+        width: 60vw;
+    }
 }
