--- a/estilo/estilologin.css
+++ b/estilo/estilologin.css
@@ -58,7 +58,9 @@ a:hover{
 
     left: 0;
 }
-.primeiro-box {/*box cadastrar*/
+
+/*PRIMEIRO BOX*/
+.primeiro-box {/*box cadastrar, que tem link para entrar*/
     display: flex;
 } 
 .coluna-um{/*para ir para o login*/
@@ -73,15 +75,18 @@ a:hover{
     align-items: center;
 
 }
-.primeiro-box .coluna-dois{
-    z-index: 11;
-}
-
-.segundo-box{ /*para realizar o login*/
+/*SEGUNDO BOX*/
+.segundo-box{ /*para realizar o login com link para ir para o cadastro*/
     position: absolute;
     display: flex;
 }
 
+/*POSICIONAMENTO DOS BOXES
+Primeira parte*/
+
+.primeiro-box .coluna-dois{
+    z-index: 11;
+}
 .segundo-box .coluna-um {
     order: 2;
     z-index: -1;
@@ -89,8 +94,6 @@ a:hover{
 .segundo-box .coluna-dois {
     order: 1;
     z-index: -1;
-
-
 }
 
 
@@ -137,12 +140,24 @@ button:hover{
     opacity: 0.8;
 }
 
+#novaSenha{
+    color: var(--corverde2);
+    text-align: center;
+    font-size: 14px;
+}
+
+/*POSICIONAMENTO DOS BOXES PARA TRANSIÇÃO JS
+.entrar-js E .cadastrar-js serão adicionados no js*/
+
+/*Remove a sobreposição das divs*/
 .entrar-js .primeiro-box {
     display: none;
 }
 .cadastrar-js .segundo-box{
     display: none;
 }
+/**/
+
 .entrar-js .primeiro-box .coluna-um {
     z-index: -1;
 }
@@ -151,51 +166,31 @@ button:hover{
 }
 .entrar-js .segundo-box .coluna-dois {
     z-index: 11;
-    
 }
-
 .entrar-js .segundo-box .coluna-um {
     z-index: 12;
 }
-
 .entrar-js .box::before {
     left: 60%;
     border-radius: 0 10px 10px 0;
     animation: slidein 1.3s;
-    
     z-index: 12;
 }
+/**/
 
 .cadastrar-js .box::before {
     animation: slideout 1.3s;
-
     z-index: 12;
 }
-
 .cadastrar-js .segundo-box .coluna-um,
 .cadastrar-js .segundo-box .coluna-dois {
-    z-index: -1;
-    
+    z-index: -1; 
 }
 .cadastrar-js .primeiro-box .coluna-dois {
-    z-index: 11;
-    
+    z-index: 11; 
 }
 .cadastrar-js .primeiro-box .coluna-um {
     z-index: 13;
-}
-
-/* DESLOCAMENTO CONTEÚDO ATRÁS DO BOX:BEFORE*/
-.entrar-js .primeiro-box .coluna-dois {
-    z-index: -1;
-    position: relative;
-    animation: deslocamentoEsq 1.3s;
-}
-
-.cadastrar-js .segundo-box .coluna-dois {
-    position: relative;
-    z-index: -1;
-    animation: deslocamentoDir 1.3s;
 }
 
 /*Responsividade*/
@@ -211,3 +206,5 @@ button:hover{
         width: 60vw;
     }
 }
+
+/*ANIMAÇÕES*/
