--- a/estilo/estilologin.css
+++ b/estilo/estilologin.css
@@ -51,7 +51,7 @@ a:hover{
     border-radius: 10px;
     width: 98vw;
     height: 60vh;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 } 
 .box::before{
     content: "";
@@ -145,9 +145,15 @@ a{
 }
 input{
     border: none;
+    color: var(--corverde2);
     border-radius: 8px;
     padding: 8px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
+input:focus{
+    background-color: white;
+    color: var(--corverde2);
+    outline: none;
 }
 button{
     padding: 7px;
