--- a/estilo/estilologin.css
+++ b/estilo/estilologin.css
@@ -1,6 +1,6 @@
 @charset "UTF-8"; 
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap'); /*fonte da pagina de cadastro*/
 
 :root{
     --corfundo: #e6ecf1;
