--- a/estilo/estiloPrincipal.css
+++ b/estilo/estiloPrincipal.css
@@ -1,14 +1,15 @@
 @charset "UTF-8"; 
 
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap'); /*fonte da logo*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); /*fonte corpo*/
 
 :root{
-    --corfundo: #e6ecf1;
+    --corfundo: hsl(0, 0%, 5%);
     --cormarromclaro: rgb(119, 119, 119);
     --cormarromescuro: #9D7B6F;
     --corvermelho: #8C463F;
-    --corverde: #5E8C65;
-    --corverde2: #406145;
+    --corverde: #4A7453;
+    --corverde2: #354D37;
 }
 *{
     margin: 0;
@@ -16,13 +17,21 @@
     box-sizing: border-box;
     color: white;
 }
-
+.imgFundo{
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-image: url(../imagens/fundo.png), linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    background-blend-mode: multiply;
+    z-index: -1;
+}
 body{
     background-color: var(--corfundo);
+    font-family: "Roboto", sans-serif;    
 }
 
 header{
-    background-color: var(--corverde);
+    background-color: hsla(133, 22%, 37%, 0.6);
     padding: 10px;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
 }
@@ -31,9 +40,9 @@ header{
     align-items: center;
 }
 .divLogo img{
-    width: 40px;
-    height: 40px;
-    border: 1px solid var(--corfundo);
+    width: 30px;
+    height: 30px;
+    border: 1px solid white;
     border-radius: 50%;
     margin: 2px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
@@ -45,6 +54,18 @@ header{
 }
 
 
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: hsla(125, 18%, 25%, 0.6);
+    padding: 2px;
+    width: 100vw;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+    font-size: 12px;
+}
 
 /*Responsividade*/
 
