--- a/estilo/estilologin.css
+++ b/estilo/estilologin.css
@@ -7,8 +7,8 @@
     --cormarromclaro: rgb(119, 119, 119);
     --cormarromescuro: #9D7B6F;
     --corvermelho: #8C463F;
-    --corverde: #5E8C65;
-    --corverde2: #406145;
+    --corverde: #4A7453;
+    --corverde2: #354D37;
 }
 *{
     margin: 0;
@@ -19,7 +19,7 @@
 }
 
 body{
-    background-color: var(--corfundo);
+    background-color: #1a1a1a;
 }
 ul{ /*link para cadastrar com conta google*/
     list-style-type: none;
@@ -52,11 +52,12 @@ a:hover{
     width: 98vw;
     height: 60vh;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+    background-color: #cecece;
 } 
 .box::before{
     content: "";
     position: absolute;
-    background-color: #5E8C65;
+    background-color: #4A7453;
     width: 40%;
     height: 100%;
     border-radius: 10px 0 0 10px;
