--- a/estilo/estiloPrincipal.css
+++ b/estilo/estiloPrincipal.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); /*fonte corpo*/
 
 :root{
-    --corfundo: hsl(0, 0%, 5%);
+    --corfundo: hsl(0, 0%, 5%, 0.4);
     --corverde: hsla(133, 22%, 37%, 0.6);
     --corverde2: hsla(125, 18%, 25%, 0.6);
 }
@@ -30,6 +30,7 @@ body{
 header{
     background-color: hsla(133, 22%, 37%, 0.6);
     padding: 10px;
+    margin-bottom: 10px;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
 }
 .divLogo{
@@ -49,13 +50,27 @@ header{
     font-size: 30px;
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
 }
-
+main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contPrincipal{
+    overflow-y: auto;
+    background-color: var(--corfundo);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
+    width: 80vw;
+    height: 80vh;
+    padding: 10px;
+    border-radius: 10px;
+}
 
 footer{
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: hsla(125, 18%, 25%, 0.6);
+    margin-top: 2px;
     padding: 2px;
     width: 100vw;
     height: 50px;
