--- a/estilo/estiloPrincipal.css
+++ b/estilo/estiloPrincipal.css
@@ -1,20 +1,24 @@
-@charset "UTF-8"; 
+@charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap'); /*fonte da logo*/
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); /*fonte corpo*/
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+/*fonte da logo*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/*fonte corpo*/
 
-:root{
+:root {
     --corfundo: hsl(0, 0%, 5%, 0.4);
     --corverde: hsla(133, 22%, 37%, 0.6);
     --corverde2: hsla(125, 18%, 25%, 0.6);
 }
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color: white;
 }
-.imgFundo{
+
+.imgFundo {
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -22,22 +26,25 @@
     background-blend-mode: multiply;
     z-index: -1;
 }
-body{
+
+body {
     background-color: var(--corfundo);
-    font-family: "Roboto", sans-serif;    
+    font-family: "Roboto", sans-serif;
 }
 
-header{
+header {
     background-color: hsla(133, 22%, 37%, 0.6);
     padding: 10px;
     margin-bottom: 10px;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
 }
-.divLogo{
+
+.divLogo {
     display: flex;
     align-items: center;
 }
-.divLogo img{
+
+.divLogo img {
     width: 30px;
     height: 30px;
     border: 1px solid white;
@@ -45,17 +52,20 @@ header{
     margin: 2px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
 }
-.divLogo h1{
+
+.divLogo h1 {
     font-family: "Outfit", sans-serif;
     font-size: 30px;
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
 }
-main{
+
+main {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.contPrincipal{
+
+.contPrincipal {
     overflow-y: auto;
     background-color: var(--corfundo);
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
@@ -65,7 +75,7 @@ main{
     border-radius: 10px;
 }
 
-footer{
+footer {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,10 +91,6 @@ footer{
 
 /*Responsividade*/
 
-@media screen  and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {}
 
-}
-
-@media screen  and (min-width: 992px) {
-
-}
+@media screen and (min-width: 992px) {}
