--- a/estilo/estiloPrincipal.css
+++ b/estilo/estiloPrincipal.css
@@ -112,7 +112,23 @@ main {
     padding: 10px;
     border-radius: 10px;
 }
-
+.formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+input, #tipoGasto, option, #btnAdd{
+    color: black;
+    border: none;
+    width: 80%;
+    height: 30px;
+    border-radius: 8px;
+    padding: 8px;
+}
+#opcoesGastos {
+    
+}
 footer {
     display: flex;
     align-items: center;
