--- a/estilo/estiloPrincipal.css
+++ b/estilo/estiloPrincipal.css
@@ -104,7 +104,9 @@ main {
 }
 
 .contPrincipal {
-    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: var(--corfundo);
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
     width: 80vw;
@@ -112,23 +114,67 @@ main {
     padding: 10px;
     border-radius: 10px;
 }
+
 .formulario {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 90%;
     gap: 10px;
 }
 input, #tipoGasto, option, #btnAdd{
+    box-sizing: border-box;
     color: black;
     border: none;
-    width: 80%;
     height: 30px;
     border-radius: 8px;
     padding: 8px;
 }
-#opcoesGastos {
-    
+#btnAdd {
+    color: aliceblue;
+    background-color: var(--corverde);
+    cursor: pointer;
 }
+#btnAdd:hover {
+    background-color: var(--corverde2);
+}
+.listaGastos {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+    padding: 8px;
+    width: 90%;
+    height: 80%;
+    border-top:  2px solid var(--corverde);
+    overflow-y: auto;
+}
+/* Personalizando a barra de rolagem */
+.listaGastos::-webkit-scrollbar {
+    width: 10px;
+}
+
+.listaGastos::-webkit-scrollbar-thumb {
+    background-color: var(--corverde2);
+    border-radius: 10px; 
+}
+
+.listaGastos::-webkit-scrollbar-thumb:hover {
+    background-color: var(--corverde);
+}
+
+.listaGastos::-webkit-scrollbar-track {
+    background: transparent; /* Cor da trilha */
+    margin: 2px;
+}
+
+/*Itens da lista*/
+#gastoItem h1{
+    color: var(--corverde2);
+}
+#gastoItem p{
+    color: var(--corverde2);
+}
+
 footer {
     display: flex;
     align-items: center;
@@ -144,7 +190,12 @@ footer {
 }
 
 /*Responsividade*/
+/*TELAS MÉDIAS*/
+@media screen and (min-width: 768px) {
 
-@media screen and (min-width: 768px) and (max-width: 992px) {}
+}
 
-@media screen and (min-width: 992px) {}
+/*TELAS GRANDES*/
+@media screen and (min-width: 1024px) {
+
+}
