atualização na altura do conteudo principal

--- a/estilo/estiloPrincipal.css
+++ b/estilo/estiloPrincipal.css
@@ -277,7 +277,7 @@ footer {
     }
     .contPrincipal {
         margin: 80px 10px 20px 10px;
-        height: 45vw;
+        height: 520px;
     }
     .graficos {
         margin: 80px 10px 20px 10px;
