--- a/estilo/estiloPrincipal.css
+++ b/estilo/estiloPrincipal.css
@@ -119,7 +119,7 @@ main {
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
     margin: 80px 0 10px 0;
     width: 80vw;
-    height: 80vh;
+    height: 84vh;
     padding: 10px;
     border-radius: 10px;
 }
@@ -130,7 +130,7 @@ main {
     width: 90%;
     gap: 10px;
 }
-input, #tipoGasto, option, #btnAdd{
+input, #tipoGasto, option, #btnAdd, #categoria{
     box-sizing: border-box;
     color: black;
     border: none;
@@ -302,11 +302,11 @@ footer {
         height: 100vh;
     }
     .contPrincipal {
-        margin: 100px 10px 20px 10px;
-        height: 520px;
+        margin: 80px 10px 20px 10px;
+        height: 540px;
     }
     .graficos {
-        margin: 100px 10px 20px 10px;
+        margin: 80px 10px 20px 10px;
         width: 50vw;
         height: ;
     }
